--- a/css/style.css
+++ b/css/style.css
@@ -35,9 +35,10 @@ body {
 }
 
 .navbar {
-  position: absolute;
+  position: fixed;
   z-index: 10;
   width: 100%;
+  background-color:#fff;
   
 }
 
